src/test/deca/syntax/valid/decl_class/test_assign_class_main.deca
// Description:
//    Programme minimaliste initialisant une classe dans le main qui n'existe pas
//
// Resultats:
//
// Historique:
//    cree le 01/01/2024

#include "test_decl_class.deca"

{
    A a = new A();
    int b = a.getA();
}   