src/test/deca/syntax/invalid/method_body/test_method_body_decl_var_after_inst.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
//  no viable alternative at input 'c'
// Historique:
//    cree le 01/01/2024

class A {   
    void f(int a) {
        int b;
        b = a + 1;
        int c;
    }
}
